Minutes for 17th September SSWG meeting

--- a/meetings/2024-09-17.md
+++ b/meetings/2024-09-17.md
@@ -1,11 +1,63 @@
-# Standard Stewardship Working Group meeting
+# Stewardship of the Standard Working Group
 
-## 17th September 2024
+## 17 September 2024
 
-Present:
+Attendees: Steven Flower (Open Data Services), Bee Webb (Open Data Services), Rob Redpath (Open Data Services), Amy Guy (Open Data Services), Siem Vaessen (Zimmerman), Alex Tilley (Publish What You Fund head of research), Melis Karakus (Danish Refugee Council), Annelise Parr (UNDP), Sylvan Ridderinkhof (Zimmerman), Angelina Virchenko (Food Security Cluster under Humanitarian sector), David Megginson, Melina Lower (GIZ, supporting unit for BMZ), Isabel Precious-Birds (Open Data Services), Ryan Boles (USAID), Bill Anderson, Elise Egan (USAID), Marcel Laqueur (FFO Germany), Joshua Satre
 
-Regrets:
+Apologies: Mark Brough, wakilongomweshwa@gmail.com
 
-### Notes
+### Minutes
 
-### Actions
+#### Introduction and context
+
+[Background information](https://docs.google.com/presentation/d/1logmF-5Hr5APJtY0bhb08-gc5UP1MAfgLs1-RHiLvhM/edit#slide=id.p1) about IATI standard governance from Steven.
+
+* All [changes logged on iati site](https://iatistandard.org/en/iati-standard/upgrades/upgrade-changelogs/)
+* Limited information on process for these changes https://iatistandard.org/en/iati-standard/upgrades/how-we-manage-the-standard/upgrade-process/ 
+* Last major update (to 2.03) some processes were established - Patch, Minor, Major
+* Group is to discuss these processes, are they appropriate, what do we need?
+
+#### Purpose of this group
+
+* [Terms of Reference](https://drive.google.com/file/d/1L4tOQ2UhJAN87_qmUZZ8gx70qxCovXWc/view)
+* Work together to make recommendations to the Governing Board on the _change process_ (not changes to the standard itself).
+* Make sure we get input from a cross-section of users and understand how different users experience different changes. Timelines users have to act on changes. Evaluate positive and negative impact of changes.
+* Changes to standard vs changes to the guidance.
+
+#### Ways of working
+
+* This group is for three months, with three meetings.
+* Proposal to work via github discussions, in public.
+* Happy for Secretariat to chair and organise.
+
+#### Current process
+
+* Agreement that the standard comprises a collection of schema, codelists, documentation, and rules.
+* Review of current change process as written, which hasn't been used since 2018.
+* Lack of clarity about how some kinds of changes can/should be made, and what the Secretariat has the authority to do; how changes are initiated.
+* Different people impacted differently by changes (what may seem small for one is not for another).
+* How can we make 'major' upgrades less painful? Lack of appetite for them, with current process. A need for stability.
+* Breaking changes worthwhile if it makes the standard more understandable and useable by more smaller orgs.
+
+In breakout groups, we worked through three example needed changes and how we might approach them.
+
+* Importance of communication and outreach with users and publishers.
+* Likihood of pushback from publishers if changes have a big impact on them.
+* Sharing clear benefit of changes.
+* Prioritising data use needs or publisher needs.
+* Meaning of a "major" change in practice.
+* Changelogs and highlighting changes in documentation.
+* Predictable release cycles for changes; time for input or concerns to be raised.
+* The kinds of changes the Secretariat can take initiative on.
+
+Further discussion on open questions will be useful:
+
+* Whether there needs to be a standard for data for data use, as well as data publication.
+* How much cleaning of data should tooling do for users?
+* Use of extensions and components.
+
+#### Next steps
+
+* Github forum access etc will be shared.
+* Secretariat will shared guiding questions and more examples
+* Invites to next meetings to follow.
