--- a/meetings/2024-10-22.md
+++ b/meetings/2024-10-22.md
@@ -1,11 +1,60 @@
-# Standard Stewardship Working Group meeting
+# Stewardship of the Standard Working Group
 
 ## 22nd October 2024
 
-Present:
+Attendees: Alex Tilley (Publish What You Fund), Bill Anderson, David Megginson (UN OCHA),  Elise Egan (USAID), Johan Zambrano (USAID), Mark Brough (Emergentally), Melina Lower (GIZ), Siem Vaessen (Zimmerman + IATI Governing Board), Sylvan Ridderinkhof (Zimmerman), Melis Karakus (Danish Refugee Council), Angelina Virchenko (UN Food and Agriculture Organization)
 
-Regrets:
+IATI Secretariat representatives: Steven Flower (Open Data Services), Bee Webb (Open Data Services), Rob Redpath (Open Data Services), Isabel Precious-Birds (Open Data Services), Cody Wallace (UNDP)
 
-### Notes
+Apologies: Amy Guy (Open Data Services), Annelise Parr (UNDP), Ryan Boles (USAID), Joshua Satre (USAID),  Marcel Laqueur (FFO Germany)
 
-### Actions
+Non attendees: Wakilongo Mweshwa Robert (AIGD AFRICA)
+
+### Minutes 
+
+#### Introductions and Recap
+
+* [Recap](https://docs.google.com/presentation/d/1A8YI77gWSAwnbmRglQXiqa4yum4KqpIiI1xILKkEaG0/edit?usp=sharing) of objectives of the SSWG from Steven.
+* Guiding questions have been shared in github forums.
+* Today, group is to focus on guiding principles for standard changes.
+
+#### Principles for change
+
+* Discussed proposed principles for change based on Github forum discussions.
+* The transparency of the process should be explicit.
+* Broadening participation and outreach to affected groups is important.
+* Different types of changes - use case driven, technical/maintenance driven, changes mandated by changes to other standards. 
+
+#### Principles for the Standard?
+
+* Discussed proposed principles for the standard based on Github forum discussions. What is the role of the standard in the initiative and where do we want it to go?
+* Different meanings of "modularity" in the standard, and possible impact - complexity vs innovation.
+* Shared examples of extensions from the [Open Contracting standard](https://extensions.open-contracting.org/en/).
+* Comparability - how comparable should IATI data be from different reporting organisations?
+
+#### Responsibilities
+
+* What roles and responsibilities should the various stakeholders have in the [change process](https://iatistandard.org/en/iati-standard/upgrades/how-we-manage-the-standard/)?
+* Example from [360 Giving standard](https://www.threesixtygiving.org/data-standard/governance-of-the-data-standard/).
+* How should change requests be received?
+* Need to balance the process - checks and balances without burden. Transparency and good communication can mitigate this.
+
+#### Translation
+
+* How do we address accessibility of engaging with the change process, including but not limited to translation?
+* Proposed changes should use short, non technical language as far as possible.
+* Change summary one-pagers should be translated.
+
+#### Guidance
+
+* The guidance is separate from the standard and not current change controlled. Should this be considered in our process?
+* Agreed on flexibility to change, and need to create shorter, clearer guidance than gives context.
+* Also need for user guidance - if you use the data, this is what it means and how you should use it. For example, a standard way to split multi sector transactions.
+* Common pitfalls in the data.
+
+#### Next steps
+
+* Group to continue collaborating in GitHub discussions.
+* Invite to next meeting (12 Nov) to follow.
+* Secretariat to share examples of change proposals from the 360 Giving standard.
+* Secretariat to ask OCP for their reflections on standard extensions.
