Apply suggestions from code review
Co-authored-by: Amy Guy <amy@rhiaro.co.uk>

--- a/meetings/2024-11-12.md
+++ b/meetings/2024-11-12.md
@@ -28,7 +28,7 @@ Non attendees: Wakilongo Mweshwa Robert (AIGD AFRICA)
 
 Steven shared two examples of change control documents from other data standards,  [360 Giving](https://github.com/IATI/standard-process/discussions/10) and [Open Referral](https://github.com/IATI/standard-process/discussions/13).
 
-* Agreement that a similar template would be useful for IATI.
+* Agreement that similar templates for proposing changes would be useful for IATI.
 * Need to ensure that this process includes communicating changes and their impact to data users.
 * Idea - a requirement to "subscribe" to a IATI Standard Updates listserv in order to download IATI files or embed/use secretariat run APIs?
 * A standard way of logging dependencies would be useful - i.e. which tools would be impacted by a change and how
@@ -36,7 +36,7 @@ Steven shared two examples of change control documents from other data standards
 
 #### Impact assessment
 
-Amy presented a draft [impact-based upgrade approach](https://github.com/IATI/standard-process/discussions/12). This approach would be pragmatic, and decouple changes to the standard from the Major/Minor/Patch definitions.
+Amy presented a draft [impact-based upgrade approach](https://github.com/IATI/standard-process/discussions/12). This approach would be pragmatic, based on real-world impact rather than theoretical or hypothetical, and decouple the decision-making about changes to the standard from the Major/Minor/Patch definitions.
 
 ##### Questions for the SSWG
 
@@ -65,8 +65,9 @@ Recap of the relevant parts of the SOPs from Rob. We aren't in a place to propos
 Question: Can we ask to suspend the SOPs in this area to give flexibility to try new processes?
 
 * Agreement that SOPs can be changed by members, but existing SOPs should be followed for now.
+* We can work within the bounds of the SOPs, while experimenting with new processes for describing and evaluating the impact of changes.
 * Secretariat should approach MA to communicate this work and plans, and to ask for goodwill to take this work forward. Board will then have oversight of the ongoing work.
-* Would be useful to set forward a 6 month timetable to inform the community.
+* Would be useful to set forward a 6 month timetable of anticipated changes to inform the community and get wider engagement in the process.
 * Emphasis on sharing the learning we have gained from this group.
 
 #### Next steps
